--- a/articles/iot-dps/index.yml
+++ b/articles/iot-dps/index.yml
@@ -10,12 +10,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/03/2020
   ms.author: wesmc
-  ms.openlocfilehash: 2d89b99005a4e430aca85c109f3d000c3b21674c
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: de21c27cd72802eea0a17d07b6abc5282f85561f
+  ms.sourcegitcommit: cd9754373576d6767c06baccfd500ae88ea733e4
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "80133273"
+  ms.lasthandoff: 11/20/2020
+  ms.locfileid: "94967195"
 landingContent:
 - title: Azure IoT Hub Device Provisioning Service (DPS) について
   linkLists:
@@ -26,7 +26,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: Azure IoT の自動プロビジョニングの概念
-      url: concepts-auto-provisioning.md
+      url: ./concepts-roles-operations.md
   - linkListType: video
     links:
     - text: IoT Hub DPS のデモ
