--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -29,6 +29,8 @@
   items:
     - name: 作成と接続
       items:
+        - name: Azure CLI
+          href: create-data-warehouse-azure-cli.md
         - name: ポータル
           href: create-data-warehouse-portal.md
         - name: PowerShell
