--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -36,6 +36,10 @@
     - name: Azure Lighthouse と Azure マネージド アプリケーション
       displayName: 'managed apps, ama'
       href: ./concepts/managed-applications.md
+    - name: セキュリティ
+      items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
 - name: 操作方法ガイド
   items:
     - name: Azure Lighthouse への顧客のオンボード
