--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -15,7 +15,7 @@
       href: partner-center-portal/account-migration-from-cpp-to-pc.md
 - name: 概念
   items:
-    - name: 発行オプションと考慮事項
+    - name: リスト オプション
       href: determine-your-listing-type.md
     - name: コマーシャル マーケットプレースでの取引
       href: marketplace-commercial-transaction-capabilities-and-considerations.md
@@ -349,15 +349,14 @@
       items:
         - name: SaaS Fulfillment API の概要
           href: partner-center-portal/pc-saas-fulfillment-apis.md
-          items:
-            - name: SaaS アプリケーションを登録する
-              href: partner-center-portal/pc-saas-registration.md
-            - name: SaaS Fulfillment API v2
-              href: partner-center-portal/pc-saas-fulfillment-api-v2.md
-            - name: SaaS Fulfillment API v1 (非推奨)
-              href: partner-center-portal/pc-saas-fulfillment-api-v1.md
-            - name: SaaS Fulfillment API - FAQ
-              href: partner-center-portal/saas-fulfillment-apis-faq.md
+        - name: SaaS アプリケーションを登録する
+          href: partner-center-portal/pc-saas-registration.md
+        - name: SaaS Fulfillment API v2
+          href: partner-center-portal/pc-saas-fulfillment-api-v2.md
+        - name: SaaS Fulfillment API v1 (非推奨)
+          href: partner-center-portal/pc-saas-fulfillment-api-v1.md
+        - name: SaaS Fulfillment API - FAQ
+          href: partner-center-portal/saas-fulfillment-apis-faq.md
 - name: リソース
   items:
     - name: コマーシャル マーケットプレースの FAQ
