--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -116,8 +116,6 @@
           href: sample-scripts-azure-cli.md
         - name: Java 接続プール
           href: sample-scripts-java-connection-pooling.md
-        - name: Azure Policy の組み込み
-          href: ./policy-reference.md
     - name: 概念
       items:
         - name: サーバー
@@ -156,6 +154,9 @@
               href: concepts-azure-ad-authentication.md
             - name: インフラストラクチャの二重暗号化
               href: concepts-infrastructure-double-encryption.md
+            - name: Azure Policy によるセキュリティ制御
+              displayName: 'regulatory, compliance, standards, domains'
+              href: ./security-controls-policy.md
             - name: セキュリティ ベースライン
               href: security-baseline.md
         - name: Azure の計画メンテナンス
@@ -511,7 +512,7 @@
           items:
             - name: Azure portal
               href: flexible-server/how-to-configure-high-availability.md
-        - name: ネットワーキング
+        - name: ネットワーク
           items:
             - name: プライベート アクセス (VNet 統合)
               items:
@@ -573,6 +574,9 @@
       href: /azure/templates/microsoft.dbformysql/allversions
     - name: 管理ストアド プロシージャ
       href: reference-stored-procedures.md
+    - name: Azure Policy の組み込み
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: リソース
   items:
     - name: デプロイ テンプレート
