--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -254,6 +254,20 @@ groups:
     title: 言語検出
   - id: text-analytics-sentiment-analysis
     title: 感情分析
+- id: programming-languages-set-functions-lang-workers
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-powershell
+    title: PowerShell
+  - id: programming-language-python
+    title: Python
 - id: programming-languages-set-functions
   title: プログラミング言語
   prompt: プログラミング言語を選択する
@@ -270,20 +284,6 @@ groups:
     title: Python
   - id: programming-language-typescript
     title: TypeScript
-- id: programming-languages-text-analytics
-  title: プログラミング言語
-  prompt: プログラミング言語を選択する。
-  pivots:
-  - id: programming-language-csharp
-    title: C#
-  - id: programming-language-python
-    title: Python
-  - id: programming-language-java
-    title: Java
-  - id: programming-language-javascript
-    title: JavaScript
-  - id: programming-language-other
-    title: その他の言語
 - id: programming-languages-metrics-monitor
   title: プログラミング言語
   prompt: プログラミング言語を選択する。
@@ -364,34 +364,6 @@ groups:
     title: C#
   - id: programming-language-java
     title: Java
-  - id: programming-language-more
-    title: その他の言語
-- id: programming-languages-set-fifteen
-  title: プログラミング言語
-  prompt: プログラミング言語を選択する
-  pivots:
-  - id: programming-language-csharp
-    title: C#
-  - id: programming-language-go
-    title: Go
-  - id: programming-language-java
-    title: Java
-  - id: programming-language-more
-    title: その他の言語
-- id: programming-languages-set-sixteen
-  title: プログラミング言語
-  prompt: プログラミング言語を選択する
-  pivots:
-  - id: programming-language-csharp
-    title: C#
-  - id: programming-language-cpp
-    title: C++
-  - id: programming-language-go
-    title: Go
-  - id: programming-language-java
-    title: Java
-  - id: programming-language-python
-    title: Python
   - id: programming-language-more
     title: その他の言語
 - id: programming-languages-set-seventeen
@@ -873,9 +845,9 @@ groups:
   - id: programming-languages-objectivec-swift
     title: Objective-C/Swift
 metadata:
-  ms.openlocfilehash: c3dea69800b4ad3614adf953053cc43d32de94b9
-  ms.sourcegitcommit: e2dc549424fb2c10fcbb92b499b960677d67a8dd
+  ms.openlocfilehash: c8dfd8524eefd88758a04254a1e81a54fef7b26d
+  ms.sourcegitcommit: cd9754373576d6767c06baccfd500ae88ea733e4
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/17/2020
-  ms.locfileid: "94701740"
+  ms.lasthandoff: 11/20/2020
+  ms.locfileid: "94966906"
